# multi-agent-rl-mapf-drone-system

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  INTERVIEW_SUMMARY.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: _ci-cd.yml  ci-cd.yml  codeql-analysis.yml  docker.yml  test.yml
architecture/: low_level_design.txt  talking_points.md
configs/: env-prod.yaml  env.yaml  train.yaml
docker/: Dockerfile  Dockerfile.prod  docker-compose.yml
docker/k8s/: deployment.yaml  service.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md
monitoring/: alertmanager.yml  grafana-dashboard.json  prometheus.yml
scripts/: deploy.sh  run_server.sh  train.sh
src/: integrity_stats.py  integrity_validators.py  main.py  request_response_flow.MD  setup.py
src/agents/: ppo_agent.py
src/api/: __init__.py  app.py
src/env/: __init__.py  drone_env.py
src/utils/: errors.py  logger.py  metrics.py
tests/: conftest.py  test_api.py  test_integration.py  test_integrity.py  test_load.py  test_training.py
