# pyproject.toml for multi-agent-rl-mapf-drone-system

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-rl-mapf-drone-system"
version = "0.1.0"
description = "Multi-agent reinforcement learning and MAPF drone coordination system"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    # Core ML stack
    "gymnasium>=0.29.1",
    "torch==2.2.2",
    "numpy==1.24.3",

    # API and monitoring
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "prometheus-client==0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "matplotlib==3.7.1",
    "jupyter==1.0.0"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
