[metadata]
name = multi-agent-rl-mapf-drone-system
version = 0.1.0
description = Multi-agent reinforcement learning and MAPF drone coordination system
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
pythonpath = src

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
